Change styles and update loading message in html doc

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <main id="contenedor">
     <h2>Hola Mauricio</h2>
     <p>Estas son tus tareas para el día de hoy:</p>
-    <ul>Loading...</ul>
+    <ul>Cargando...</ul>
   </main>
   <script src="./index.js"></script>
 </body>
