Update ui with new guidelines

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <main id="contenedor">
-    <h2>Hola Mauricio</h2>
-    <p>Estas son tus tareas para el día de hoy:</p>
+    <h2>Hello you!</h2>
+    <p>These are your todos: </p>
     <ul>Loading...</ul>
   </main>
   <script src="./index.js"></script>
