Make UI declarative

--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejemplo Promesa con Javascript</title>
+  <title>Simple todo list app</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <main id="contenedor">
-    <h2>Hello you!</h2>
-    <p>These are your todos: </p>
-    <ul>Loading...</ul>
+  <main id="app">
   </main>
   <script src="./index.js"></script>
 </body>
