add async iterators example

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <main id="app">
+    <button>Test Stream Click</button>
+    <input type="text" />
+    <pre style="font-size: 11px; line-height: 16px; color: #fff; background: rgba(0, 0, 0, 0.7); padding: 0.5em 1em; height: 350px; overflow-y: auto;"></pre>
   </main>
-  <script src="./index.js"></script>
+  <!-- <script src="./index.js"></script> -->
+  <script src="./async-iterators.js"></script>
 </body>
 </html>
